0.1.2 -> 0.1.3

- ASR carry flag improved yet again (didn't work for positive values)
- Convert MOV instruction to SHIFT instruction (in the backend only) for better use of update flags
- Fixing a bug that prevented the leftest text of editor to be selected with mouse
- Fixing Regex parser arguments parsing (strip whitespaces)


0.1.1 -> 0.1.2

- Fixing character parsing
- Fixing unresponsive app bug due to inexistant save file
- Optimizing concurrent management (using bound properties instead of direct assignation)
- Fixing unrefreshed screen bug
- Adding global directive logic (actually usable now)
- Fixing the stack auto-scrolling for non-HDPI screens
- Adding Fill directive
- Adding AtlantaFx theme (instead of JavaFx Moderna with a bit of BootstrapFx)
- Adding support for Dark & Light themes
- Legacy Parser now works when selected in the drop down menu (its use is still not recommended nonetheless)
- RRX as an instruction is now fully supported
- S condition now update all flags on ROR instruction
- ASR carry flag should now work correctly
- Enhancing settings menu