@@ -4,6 +4,7 @@
 - Convert MOV instruction to SHIFT instruction (in the backend only) for better use of update flags
 - Fixing a bug that prevented the leftest text of editor to be selected with mouse
 - Fixing Regex parser arguments parsing (strip whitespaces)
+- Two new themes (Nord & Cupertino) are now available
 
 
 0.1.1 -> 0.1.2
